k8s/mattermost.svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mattermost
  namespace: default
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: mattermost
    tier: app
