k8s/mattermost.ing.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mattermost
spec:
  rules:
  - host: mattermost
    http:
      paths:
      - backend:
          serviceName: mattermost
          servicePort: 80
